--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@tarojs/taro-tt": "2.2.6",
     "@tarojs/taro-weapp": "2.2.6",
     "babel-runtime": "^6.26.0",
+    "mta-wechat-analysis": "^1.3.9",
     "nerv-devtools": "^1.5.5",
     "nervjs": "^1.5.5",
     "regenerator-runtime": "0.11.1",
