--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "@tarojs/taro-tt": "2.2.6",
     "@tarojs/taro-weapp": "2.2.6",
     "babel-runtime": "^6.26.0",
+    "jsonwebtoken": "^8.5.1",
     "mta-wechat-analysis": "^1.3.9",
     "nerv-devtools": "^1.5.5",
     "nervjs": "^1.5.5",
     "regenerator-runtime": "0.11.1",
+    "sha1": "^1.1.1",
     "taro-ui": "^2.3.4"
   },
   "devDependencies": {
